--- a/_posts/2021-09-10-resume.markdown
+++ b/_posts/2021-09-10-resume.markdown
@@ -5,4 +5,5 @@ date: 2021-09-10 00:00:00 +0300
 description: My Resume
 img:
 ---
-<embed src="../assets/Resume_N.pdf" type="application/pdf">
+<iframe src="../assets/Resume_N.pdf" width="100%" height="500px">
+</iframe>
