--- a/_posts/2021-09-10-resume.markdown
+++ b/_posts/2021-09-10-resume.markdown
@@ -3,6 +3,7 @@ layout: post
 title: Resume
 date: 2021-09-10 00:00:00 +0300
 description: My Resume
+img: CV.jpg
 ---
 <iframe src="../assets/Resume_N.pdf" width="100%" height="500px">
 </iframe>
